--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.valod {
+  position: fixed;
+  background-color: black;
+  transform: rotateX("15deg")
+}
