--- a/src/components/Board/styles.css
+++ b/src/components/Board/styles.css
@@ -11,7 +11,7 @@
     margin: 10px;
     border-radius: 10px;
     box-shadow: 1px 1px 3px rgba(0,0,0,0.5);
-    border: 2px solid #7d7d7d; /* Параметры границы */
+    border: 2px solid #7d7d7d;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
