--- a/src/components/Board/styles.css
+++ b/src/components/Board/styles.css
@@ -40,4 +40,22 @@
     align-items: center;
     flex-direction: column;
     box-shadow: 0px 0px 3px rgba(0,0,0,0.5);
+    padding: 5px;
+  }
+  .movable-item2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+  .deleteBtn{
+    display: flex;
+    justify-content: end;
+  }
+  .deleteBtn button{
+    border: none;
+    background-color: transparent;
+  }
+  .deleteBtn button{
+    cursor: pointer;
   }
