--- a/src/style/addtask.css
+++ b/src/style/addtask.css
@@ -11,17 +11,23 @@
 }
 .addDiv {
   padding: 150px 100px;
-  background-color: blue;
+  background-color: rgb(241, 241, 250);
   display: flex;
   justify-content: center;
   position: fixed;
   z-index: 2;
-  color: white;
+  color: black;
+  border: 1px solid black;
+  border-radius: 30px;
 }
 .addDiv input {
   display: block;
   margin-top: 10px;
   margin-bottom: 5px;
+  box-shadow: 5px 5px #888888;
+  border-radius: 20px;
+  border: 1px solid #888888;
+  padding: 5px;
 }
 .addDiv button {
   padding-left: 75px;
