--- a/src/style/home.css
+++ b/src/style/home.css
@@ -3,15 +3,34 @@
   justify-content: end;
 }
 .linkBtn button {
+  border: 1px solid rgb(83, 83, 212);
+  border-radius: 20px;
   background-color: transparent;
-  margin: 10px;
-  padding: 5px 15px;
-  border: 1px solid blue;
-  border-radius: 25px;
-  margin-bottom: 15px;
+  margin-left: 5px;
+  margin-top: 10px;
+  text-decoration: none;
+  padding: 2px 10px;
 }
 .parent {
   display: flex;
   justify-content: space-around;
   margin-top: 30px;
+}
+.linkLogOut{
+  text-decoration: none;
+  color: black;
+}
+.homeParent{
+  display: flex;
+  justify-content: center;
+}
+.linkBtnDiv{
+  display: flex;
+  justify-content: end;
+  margin: 10px 50px 0px 0px
+}
+.parentChild{
+  display: flex;
+  justify-content: space-around;
+  
 }
