--- a/src/style/login.css
+++ b/src/style/login.css
@@ -1,8 +1,12 @@
-.formDiv {
+.singInDiv {
   display: flex;
   justify-content: center;
 }
-.formDiv input {
+h1{
+  text-align: center;
+  margin-top: 80px;
+}
+.singInDiv input {
   display: block;
   margin-top: 10px;
   margin-bottom: 10px;
@@ -11,8 +15,8 @@
   border: 1px solid #888888;
   padding: 5px;
 }
-.formDiv button{
-  border: 1px solid rgb(249, 249, 252);
+.singInDiv button{
+  border: 1px solid rgb(244, 244, 250);
   border-radius: 20px;
   background-color: transparent;
   margin-left: 5px;
@@ -20,12 +24,19 @@
   text-decoration: none;
   padding: 2px 10px;
 }
-.formDiv button:hover{
+.singInDiv button:hover{
   background-color: rgb(10, 10, 80);
   cursor: pointer;
   color: white;
 }
-.chidrenForm{
+.btnLink{
+  text-decoration: none;
+  color: black;
+}
+.btnLink:hover{
+  color: white;
+}
+.signInChild{
   background-color: cadetblue;
   padding: 50px;
 }
