--- a/src/style/addtask.css
+++ b/src/style/addtask.css
@@ -2,6 +2,7 @@
   border: none;
   background-color: transparent;
   cursor: pointer;
+  margin: 10px;
 }
 .closeButton {
   border: none;
@@ -15,6 +16,8 @@
   display: flex;
   justify-content: center;
   position: fixed;
+  top:10px;
+  left: 30%;
   z-index: 2;
   color: black;
   border: 1px solid black;
@@ -29,6 +32,18 @@
   border: 1px solid #888888;
   padding: 5px;
 }
-.addDiv button {
-  padding-left: 75px;
+.upDateBtn{
+  border: 1px solid rgb(83, 83, 212);
+  border-radius: 20px;
+  background-color: transparent;
+  margin-left: 5px;
+  margin-top: 10px;
+  text-decoration: none;
+  padding: 2px 10px;
+  margin: 10px;
+}
+.upDateBtn:hover{
+  background-color: rgb(10, 10, 80);
+  cursor: pointer;
+  color: white;
 }
