--- a/src/style/home.css
+++ b/src/style/home.css
@@ -1,15 +1,38 @@
-.linkBtn {
+.HOMELOGOS{
   display: flex;
-  justify-content: end;
+  justify-content: space-between;
+  align-items: center;
+}
+.HOMELOGOS div{
+  display: flex;
+  align-items: center;
+}
+.kanHOME{
+  width: 100px;
+  margin-right: 20px;
+
+}
+h1{
+  margin-top: 19px;
+}
+.imgingKAN{
+  width: 100px;
 }
 .linkBtn button {
   border: 1px solid rgb(83, 83, 212);
   border-radius: 20px;
   background-color: transparent;
-  margin-left: 5px;
+  margin-left: 25px;
   margin-top: 10px;
   text-decoration: none;
   padding: 2px 10px;
+}
+.homeParentBig{
+  background-color: hsl(203,24%,80.4%);;
+  background-size: 100%;
+  object-fit: cover;
+  padding-bottom: 300px;
+  padding-top:5px;
 }
 .parent {
   display: flex;
@@ -33,4 +56,7 @@
   display: flex;
   justify-content: space-around;
   
+}
+.addButton{
+  font-size: 25px;
 }
