--- a/src/style/register.css
+++ b/src/style/register.css
@@ -11,6 +11,11 @@
   border: 1px solid #888888;
   padding: 5px;
 }
+.bosss{
+  background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);
+  padding-top: 35px;
+  padding-bottom: 102px;
+}
 .formDiv button{
   border: 1px solid rgb(249, 249, 252);
   border-radius: 20px;
@@ -26,6 +31,29 @@
   color: white;
 }
 .chidrenForm{
-  background-color: cadetblue;
+  background-color: transparent;
+  border: 1px solid black;
+  border-radius: 20px;
   padding: 50px;
+}
+.bossChild{
+  display: flex;
+  justify-content: center;
+}
+.navDiv{
+  display: flex;
+  justify-content: center;
+}
+.logoDIV{
+  display: flex;
+  align-items: center;
+}
+.navDiv div img{
+  width: 300px;
+  height: 300px;
+  margin-left: 20px;
+}
+.regLOGO{
+  width: 100px;
+  height: 100px;
 }
